@@ -2,9 +2,17 @@ archiver/archive.c
 archiver/config-archiver.c
 archiver/location.c
 archiver/main.c
+capplets/about-me/e-image-chooser.c
+capplets/about-me/gnome-about-me-password.c
+capplets/about-me/gnome-about-me.c
+capplets/about-me/gnome-about-me.glade
 capplets/file-types/file-types-icon-entry.c
+capplets/file-types/file-types-capplet.desktop.in.in
+capplets/file-types/file-types-properties.glade
+capplets/file-types/file-types.desktop.in.in
 capplets/localization/gnome-localization-properties.c
 capplets/localization/gnome-localization-properties.glade
+capplets/localization/localization.desktop.in.in
 capplets/mime-type/edit-window.c
 capplets/mime-type/mime-data.c
 capplets/mime-type/mime-info.c
@@ -15,6 +23,8 @@ capplets/rollback/main.c
 capplets/rollback/rollback-capplet-dialog.c
 capplets/rollback/rollback.desktop.in.in
 capplets/url-properties/url-properties.c
+capplets/url-properties/url-properties.desktop.in.in
+capplets/url-properties/url.desktop.in.in
 capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
 capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
 capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
@@ -27,3 +37,5 @@ root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
 root-manager/root-manager.c
 control-center/gnomecc-event-box.c
+control-center/GNOME_ControlCenter.server.in
+schemas/desktop_gnome_font_rendering.schemas.in
